Updated pom.xml to build distribution with a runnable script